Upload github repo

--- a/notebooks/ocean-example1.ipynb
+++ b/notebooks/ocean-example1.ipynb
@@ -2,17 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "26d6cba3",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "71.1 °F\n"
-     ]
-    },
     {
      "data": {
       "application/vnd.microsoft.datawrangler.viewer.v0+json": {
@@ -38,8 +31,7 @@
          "type": "string"
         }
        ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "e9b09340-f5bd-4cec-a809-6162933e9f80",
+       "ref": "f14fd55f-cb5a-4b84-83d2-e09de58bc123",
        "rows": [
         [
          "0",
@@ -142,6 +134,11 @@
     "from email.mime.text import MIMEText\n",
     "from datetime import datetime\n",
     "import pandas as pd\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
     "\n",
     "# NOAA Station ID\n",
     "STATION_ID = \"8534720\"\n",
@@ -163,9 +160,9 @@
     "# Email config\n",
     "SMTP_SERVER = \"smtp.gmail.com\"\n",
     "SMTP_PORT = 587\n",
-    "EMAIL_SENDER = \"your_email@gmail.com\"\n",
-    "EMAIL_PASSWORD = \"your_app_password\"  # Use app password if using Gmail\n",
-    "EMAIL_RECIPIENT = \"your_email@gmail.com\"\n",
+    "EMAIL_SENDER = \"nbenelli.waterreport@gmail.com\"\n",
+    "EMAIL_PASSWORD = os.getenv(\"EMAIL_PASSWORD\")\n",
+    "EMAIL_RECIPIENT = \"nick.benelli12@gmail.com\"\n",
     "\n",
     "\n",
     "def fetch_tide_data(station_id=\"8534720\", date= None):\n",
@@ -202,8 +199,23 @@
     "    return data[\"predictions\"]\n",
     "\n",
     "\n",
-    "def fetch_water_temp():\n",
-    "    response = requests.get(TEMP_URL)\n",
+    "def fetch_water_temp(station_id : str =\"8534720\"):\n",
+    "    \n",
+    "    # response = requests.get(TEMP_URL)\n",
+    "    base_url = \"https://api.tidesandcurrents.noaa.gov/api/prod/datagetter\"\n",
+    "\n",
+    "    params = {\n",
+    "        \"product\": \"water_temperature\",\n",
+    "        \"application\": \"chatgpt-tide-app\",\n",
+    "        \"station\": station_id,\n",
+    "        \"date\": \"latest\",\n",
+    "        \"units\": \"english\",\n",
+    "        \"time_zone\": \"lst_ldt\",\n",
+    "        \"format\": \"json\",\n",
+    "    }\n",
+    "\n",
+    "    response = requests.get(base_url, params=params)\n",
+    "    response.raise_for_status()\n",
     "    data = response.json()\n",
     "    return data[\"data\"][0][\"v\"] + \" °F\"\n",
     "\n",
@@ -219,7 +231,7 @@
     "        server.login(EMAIL_SENDER, EMAIL_PASSWORD)\n",
     "        server.send_message(msg)\n",
     "\n",
-    "print(fetch_water_temp())\n",
+    "water_temp = fetch_water_temp()\n",
     "\n",
     "\n",
     "\n",
@@ -228,8 +240,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ca9577bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tide_data = fetch_tide_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "460df7b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime, time\n",
+    "\n",
+    "def filter_daytime_tides(tides, start_hour=7, end_hour=19):\n",
+    "    \"\"\"Return only tides that occur between start_hour and end_hour (24-hour format).\"\"\"\n",
+    "    result = []\n",
+    "    for tide in tides:\n",
+    "        tide_time = datetime.strptime(tide[\"t\"], \"%Y-%m-%d %H:%M\")\n",
+    "        if time(start_hour) <= tide_time.time() <= time(end_hour):\n",
+    "            result.append(tide)\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "20de987e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(filter_daytime_tides(tide_data))\n",
+    "\n",
+    "day_tide_data = filter_daytime_tides(tide_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "20f492d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Low Tide at 8:23 AM — 0.7 ft\n",
+      "High Tide at 2:47 PM — 3.9 ft\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def format_tide_for_email(tide_events):\n",
+    "    formatted = []\n",
+    "    for tide in tide_events:\n",
+    "        dt = datetime.strptime(tide[\"t\"], \"%Y-%m-%d %H:%M\")\n",
+    "        time_str = dt.strftime(\"%-I:%M %p\")  # e.g., 2:47 PM\n",
+    "        tide_type = \"High Tide\" if tide[\"type\"] == \"H\" else \"Low Tide\"\n",
+    "        height = float(tide[\"v\"])\n",
+    "        formatted.append(f\"{tide_type} at {time_str} — {height:.1f} ft\")\n",
+    "    return \"\\n\".join(formatted)\n",
+    "\n",
+    "\n",
+    "print( format_tide_for_email(day_tide_data) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "41684d76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "def format_tide_for_email(tide_events):\n",
+    "    formatted = []\n",
+    "    for tide in tide_events:\n",
+    "        dt = datetime.strptime(tide[\"t\"], \"%Y-%m-%d %H:%M\")\n",
+    "        time_str = dt.strftime(\"%-I:%M %p\")  # e.g., 2:47 PM\n",
+    "        tide_type = \"High Tide\" if tide[\"type\"] == \"H\" else \"Low Tide\"\n",
+    "        height = float(tide[\"v\"])\n",
+    "        formatted.append(f\"{tide_type} at {time_str} — {height:.1f} ft\")\n",
+    "    return \"\\n\".join(formatted)\n",
+    "\n",
+    "def generate_email_body(tide_events, water_temp_fahrenheit):\n",
+    "    today = datetime.now().strftime(\"%A, %B %d, %Y\")\n",
+    "\n",
+    "    tide_section = format_tide_for_email(tide_events)\n",
+    "\n",
+    "    body = (\n",
+    "        f\"🌊 Daily Water Report – {today} 🌊\\n\\n\"\n",
+    "        f\"🌡️ Water Temperature: {water_temp_fahrenheit}\\n\\n\"\n",
+    "        f\"🌊 Tides:\\n{tide_section}\\n\\n\"\n",
+    "        # f\"Have a great day on the water!\"\n",
+    "    )\n",
+    "    return body\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "b5cd0fc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🌊 Daily Water Report – Thursday, July 03, 2025 🌊\n",
+      "\n",
+      "🌡️ Water Temperature: 70.9 °F\n",
+      "\n",
+      "🌊 Tides:\n",
+      "Low Tide at 8:23 AM — 0.7 ft\n",
+      "High Tide at 2:47 PM — 3.9 ft\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example input data\n",
+    "# tide_data = [\n",
+    "#     {'t': '2025-07-03 08:23', 'v': '0.713', 'type': 'L'},\n",
+    "#     {'t': '2025-07-03 14:47', 'v': '3.894', 'type': 'H'}\n",
+    "# ]\n",
+    "# water_temp = \"72.5 °F\"\n",
+    "\n",
+    "email_body = generate_email_body(day_tide_data, water_temp)\n",
+    "print(email_body)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5162645a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "send_email(subject=\"Daily Water Report\", body=email_body)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d3f706",
    "metadata": {},
    "outputs": [],
    "source": []
