--- a/notebooks/ocean-example1.ipynb
+++ b/notebooks/ocean-example1.ipynb
@@ -165,7 +165,7 @@
     "EMAIL_RECIPIENT = \"nick.benelli12@gmail.com\"\n",
     "\n",
     "\n",
-    "def fetch_tide_data(station_id=\"8534720\", date= None):\n",
+    "def fetch_tide_data(station_id=\"8534720\", date=None):\n",
     "    if date is None:\n",
     "        date = datetime.now().strftime(\"%Y%m%d\")\n",
     "\n",
@@ -190,8 +190,6 @@
     "        \"format\": \"json\",\n",
     "    }\n",
     "\n",
-    "    \n",
-    "\n",
     "    response = requests.get(base_url, params=params)\n",
     "    response.raise_for_status()\n",
     "    data = response.json()\n",
@@ -199,8 +197,7 @@
     "    return data[\"predictions\"]\n",
     "\n",
     "\n",
-    "def fetch_water_temp(station_id : str =\"8534720\"):\n",
-    "    \n",
+    "def fetch_water_temp(station_id: str = \"8534720\"):\n",
     "    # response = requests.get(TEMP_URL)\n",
     "    base_url = \"https://api.tidesandcurrents.noaa.gov/api/prod/datagetter\"\n",
     "\n",
@@ -231,11 +228,11 @@
     "        server.login(EMAIL_SENDER, EMAIL_PASSWORD)\n",
     "        server.send_message(msg)\n",
     "\n",
+    "\n",
     "water_temp = fetch_water_temp()\n",
     "\n",
     "\n",
-    "\n",
-    "display( pd.DataFrame( fetch_tide_data()))"
+    "display(pd.DataFrame(fetch_tide_data()))"
    ]
   },
   {
@@ -257,6 +254,7 @@
    "source": [
     "from datetime import datetime, time\n",
     "\n",
+    "\n",
     "def filter_daytime_tides(tides, start_hour=7, end_hour=19):\n",
     "    \"\"\"Return only tides that occur between start_hour and end_hour (24-hour format).\"\"\"\n",
     "    result = []\n",
@@ -264,7 +262,7 @@
     "        tide_time = datetime.strptime(tide[\"t\"], \"%Y-%m-%d %H:%M\")\n",
     "        if time(start_hour) <= tide_time.time() <= time(end_hour):\n",
     "            result.append(tide)\n",
-    "    return result\n"
+    "    return result"
    ]
   },
   {
@@ -297,6 +295,7 @@
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "\n",
     "def format_tide_for_email(tide_events):\n",
     "    formatted = []\n",
     "    for tide in tide_events:\n",
@@ -308,7 +307,7 @@
     "    return \"\\n\".join(formatted)\n",
     "\n",
     "\n",
-    "print( format_tide_for_email(day_tide_data) )"
+    "print(format_tide_for_email(day_tide_data))"
    ]
   },
   {
@@ -320,6 +319,7 @@
    "source": [
     "from datetime import datetime\n",
     "\n",
+    "\n",
     "def format_tide_for_email(tide_events):\n",
     "    formatted = []\n",
     "    for tide in tide_events:\n",
@@ -329,6 +329,7 @@
     "        height = float(tide[\"v\"])\n",
     "        formatted.append(f\"{tide_type} at {time_str} — {height:.1f} ft\")\n",
     "    return \"\\n\".join(formatted)\n",
+    "\n",
     "\n",
     "def generate_email_body(tide_events, water_temp_fahrenheit):\n",
     "    today = datetime.now().strftime(\"%A, %B %d, %Y\")\n",
@@ -341,7 +342,7 @@
     "        f\"🌊 Tides:\\n{tide_section}\\n\\n\"\n",
     "        # f\"Have a great day on the water!\"\n",
     "    )\n",
-    "    return body\n"
+    "    return body"
    ]
   },
   {
@@ -375,7 +376,7 @@
     "# water_temp = \"72.5 °F\"\n",
     "\n",
     "email_body = generate_email_body(day_tide_data, water_temp)\n",
-    "print(email_body)\n"
+    "print(email_body)"
    ]
   },
   {
