--- a/notebooks/wind-example1.ipynb
+++ b/notebooks/wind-example1.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a6afab1f",
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "'2025-07-03T20:00' is not in list",
+     "evalue": "'2025-07-03T23:00' is not in list",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 57\u001b[39m\n\u001b[32m     42\u001b[39m     next_3_days = \u001b[38;5;28mlist\u001b[39m(\n\u001b[32m     43\u001b[39m         \u001b[38;5;28mzip\u001b[39m(\n\u001b[32m     44\u001b[39m             data[\u001b[33m\"\u001b[39m\u001b[33mdaily\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mtime\u001b[39m\u001b[33m\"\u001b[39m][:\u001b[32m3\u001b[39m],\n\u001b[32m   (...)\u001b[39m\u001b[32m     47\u001b[39m         )\n\u001b[32m     48\u001b[39m     )\n\u001b[32m     50\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[32m     51\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mcurrent\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mspeed\u001b[39m\u001b[33m\"\u001b[39m: current_wind_speed, \u001b[33m\"\u001b[39m\u001b[33mdir\u001b[39m\u001b[33m\"\u001b[39m: current_wind_dir},\n\u001b[32m     52\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mnext_24\u001b[39m\u001b[33m\"\u001b[39m: next_24,\n\u001b[32m     53\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mnext_3_days\u001b[39m\u001b[33m\"\u001b[39m: next_3_days,\n\u001b[32m     54\u001b[39m     }\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m \u001b[43mget_wind_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 29\u001b[39m, in \u001b[36mget_wind_data\u001b[39m\u001b[34m(latitude, longitude, hours, days)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# Get current hour index\u001b[39;00m\n\u001b[32m     28\u001b[39m current_hour = datetime.now().strftime(\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY-\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33mT\u001b[39m\u001b[33m%\u001b[39m\u001b[33mH:00\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m hour_idx = \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhourly\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_hour\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     31\u001b[39m current_wind_speed = data[\u001b[33m\"\u001b[39m\u001b[33mhourly\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mwind_speed_10m\u001b[39m\u001b[33m\"\u001b[39m][hour_idx]\n\u001b[32m     32\u001b[39m current_wind_dir = data[\u001b[33m\"\u001b[39m\u001b[33mhourly\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mwind_direction_10m\u001b[39m\u001b[33m\"\u001b[39m][hour_idx]\n",
-      "\u001b[31mValueError\u001b[39m: '2025-07-03T20:00' is not in list"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 57\u001b[39m\n\u001b[32m     42\u001b[39m     next_3_days = \u001b[38;5;28mlist\u001b[39m(\n\u001b[32m     43\u001b[39m         \u001b[38;5;28mzip\u001b[39m(\n\u001b[32m     44\u001b[39m             data[\u001b[33m\"\u001b[39m\u001b[33mdaily\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mtime\u001b[39m\u001b[33m\"\u001b[39m][:\u001b[32m3\u001b[39m],\n\u001b[32m   (...)\u001b[39m\u001b[32m     47\u001b[39m         )\n\u001b[32m     48\u001b[39m     )\n\u001b[32m     50\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m {\n\u001b[32m     51\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mcurrent\u001b[39m\u001b[33m\"\u001b[39m: {\u001b[33m\"\u001b[39m\u001b[33mspeed\u001b[39m\u001b[33m\"\u001b[39m: current_wind_speed, \u001b[33m\"\u001b[39m\u001b[33mdir\u001b[39m\u001b[33m\"\u001b[39m: current_wind_dir},\n\u001b[32m     52\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mnext_24\u001b[39m\u001b[33m\"\u001b[39m: next_24,\n\u001b[32m     53\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mnext_3_days\u001b[39m\u001b[33m\"\u001b[39m: next_3_days,\n\u001b[32m     54\u001b[39m     }\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m \u001b[43mget_wind_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 29\u001b[39m, in \u001b[36mget_wind_data\u001b[39m\u001b[34m(latitude, longitude, hours, days)\u001b[39m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# Get current hour index\u001b[39;00m\n\u001b[32m     28\u001b[39m current_hour = datetime.now().strftime(\u001b[33m\"\u001b[39m\u001b[33m%\u001b[39m\u001b[33mY-\u001b[39m\u001b[33m%\u001b[39m\u001b[33mm-\u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[33mT\u001b[39m\u001b[33m%\u001b[39m\u001b[33mH:00\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m hour_idx = \u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mhourly\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mtime\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mindex\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcurrent_hour\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     31\u001b[39m current_wind_speed = data[\u001b[33m\"\u001b[39m\u001b[33mhourly\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mwind_speed_10m\u001b[39m\u001b[33m\"\u001b[39m][hour_idx]\n\u001b[32m     32\u001b[39m current_wind_dir = data[\u001b[33m\"\u001b[39m\u001b[33mhourly\u001b[39m\u001b[33m\"\u001b[39m][\u001b[33m\"\u001b[39m\u001b[33mwind_direction_10m\u001b[39m\u001b[33m\"\u001b[39m][hour_idx]\n",
+      "\u001b[31mValueError\u001b[39m: '2025-07-03T23:00' is not in list"
      ]
     }
    ],
@@ -39,7 +39,7 @@
     "        \"longitude\": longitude,\n",
     "        \"hourly\": \"wind_speed_10m,wind_direction_10m\",\n",
     "        \"daily\": \"wind_speed_10m_max,wind_direction_10m_dominant\",\n",
-    "        \"timezone\": \"auto\"\n",
+    "        \"timezone\": \"auto\",\n",
     "    }\n",
     "\n",
     "    response = requests.get(base_url, params=params)\n",
