--- a/notebooks/wind-example1.ipynb
+++ b/notebooks/wind-example1.ipynb
@@ -547,7 +547,12 @@
     "\n",
     "LONG, LAT = (39.5789544215873, -74.22461197107408)\n",
     "\n",
-    "def get_daily_wind_data(latitude : float= LAT, longitude : float = LONG, times_to_get=(\"08:00\", \"12:00\", \"15:00\", \"18:00\")):\n",
+    "\n",
+    "def get_daily_wind_data(\n",
+    "    latitude: float = LAT,\n",
+    "    longitude: float = LONG,\n",
+    "    times_to_get=(\"08:00\", \"12:00\", \"15:00\", \"18:00\"),\n",
+    "):\n",
     "    base_url = \"https://api.open-meteo.com/v1/forecast\"\n",
     "\n",
     "    params = {\n",
@@ -572,19 +577,18 @@
     "    ):\n",
     "        dt = datetime.fromisoformat(t)\n",
     "        if dt.strftime(\"%H:%M\") in times_to_get and dt.date() == datetime.now().date():\n",
-    "            selected.append({\n",
-    "                \"time\": dt.strftime(\"%-I %p\"),  # e.g., \"8 AM\"\n",
-    "                \"speed_kmh\": speed,\n",
-    "                \"direction_deg\": direction,\n",
-    "            })\n",
+    "            selected.append(\n",
+    "                {\n",
+    "                    \"time\": dt.strftime(\"%-I %p\"),  # e.g., \"8 AM\"\n",
+    "                    \"speed_kmh\": speed,\n",
+    "                    \"direction_deg\": direction,\n",
+    "                }\n",
+    "            )\n",
     "\n",
     "    return selected\n",
-    "# \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
+    "#\n",
     "\n",
     "\n",
     "def get_wind_data(latitude=LAT, longitude=LONG, hours=24, days=3):\n",
@@ -618,11 +622,9 @@
     "        hour_idx = hourly_times.index(now)\n",
     "    except ValueError:\n",
     "        raise RuntimeError(f\"Current hour {now.isoformat()} not found in hourly times\")\n",
-    "    \n",
     "\n",
     "    current_wind_speed = data[\"hourly\"][\"wind_speed_10m\"][hour_idx]\n",
     "    current_wind_dir = data[\"hourly\"][\"wind_direction_10m\"][hour_idx]\n",
-    "\n",
     "\n",
     "    # Get current hour index\n",
     "    current_hour = datetime.now().strftime(\"%Y-%m-%dT%H:00\")\n",
@@ -652,7 +654,6 @@
     "        \"next_24\": next_24,\n",
     "        # \"next_3_days\": next_3_days,\n",
     "    }\n",
-    "\n",
     "\n",
     "\n",
     "# get_wind_data()\n",
@@ -700,19 +701,31 @@
     }
    ],
    "source": [
-    "def kmh_to_mph(kmh : float) -> float:\n",
-    "\n",
+    "def kmh_to_mph(kmh: float) -> float:\n",
     "    return round(kmh * 0.621371, 1)\n",
+    "\n",
     "\n",
     "def deg_to_16_point_direction(deg):\n",
     "    \"\"\"\n",
     "    Convert degrees to compass rose directions\n",
     "    \"\"\"\n",
     "    directions = [\n",
-    "        \"N\", \"NNE\", \"NE\", \"ENE\",\n",
-    "        \"E\", \"ESE\", \"SE\", \"SSE\",\n",
-    "        \"S\", \"SSW\", \"SW\", \"WSW\",\n",
-    "        \"W\", \"WNW\", \"NW\", \"NNW\"\n",
+    "        \"N\",\n",
+    "        \"NNE\",\n",
+    "        \"NE\",\n",
+    "        \"ENE\",\n",
+    "        \"E\",\n",
+    "        \"ESE\",\n",
+    "        \"SE\",\n",
+    "        \"SSE\",\n",
+    "        \"S\",\n",
+    "        \"SSW\",\n",
+    "        \"SW\",\n",
+    "        \"WSW\",\n",
+    "        \"W\",\n",
+    "        \"WNW\",\n",
+    "        \"NW\",\n",
+    "        \"NNW\",\n",
     "    ]\n",
     "    ix = round(deg / 22.5) % 16\n",
     "    return directions[ix]\n",
@@ -772,13 +785,17 @@
    "source": [
     "lines = []\n",
     "lines.append(\"**Wind Forecast for Today** 🌬️\\n\")\n",
-    "lines.append(\"Here’s the wind forecast near your beach (facing 140°) for key times today:\\n\")\n",
+    "lines.append(\n",
+    "    \"Here’s the wind forecast near your beach (facing 140°) for key times today:\\n\"\n",
+    ")\n",
     "\n",
     "for entry in wind_data:\n",
     "    line = f\"- **{entry['time']}** – {entry['speed_mph']} mph ({entry['speed_kmh']} km/h) from **{entry['direction']} ({entry['direction_deg']}°)** → **{entry['wind_type']}**\"\n",
     "    lines.append(line)\n",
     "\n",
-    "lines.append(\"\\nAll winds are **onshore**, which may create choppier ocean conditions and less ideal surf.\")\n",
+    "lines.append(\n",
+    "    \"\\nAll winds are **onshore**, which may create choppier ocean conditions and less ideal surf.\"\n",
+    ")\n",
     "\n",
     "email_body = \"\\n\".join(lines)\n",
     "\n",
@@ -794,11 +811,13 @@
    "source": [
     "lines = []\n",
     "lines.append(\"**Wind Forecast for Today** 🌬️\\n\")\n",
-    "lines.append(\"Here’s the wind forecast near your beach (facing 140°) for key times today:\\n\")\n",
+    "lines.append(\n",
+    "    \"Here’s the wind forecast near your beach (facing 140°) for key times today:\\n\"\n",
+    ")\n",
     "\n",
     "for entry in wind_data:\n",
     "    line = f\"- **{entry['time']}** – {entry['speed_mph']} mph ({entry['speed_kmh']} km/h) from **{entry['direction']} ({entry['direction_deg']}°)** → **{entry['wind_type']}**\"\n",
-    "    lines.append(line)\n"
+    "    lines.append(line)"
    ]
   },
   {
