--- a/notebooks/ocean-example1.ipynb
+++ b/notebooks/ocean-example1.ipynb
@@ -414,8 +414,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9de2ff1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'a\\nb\\nc\\n\\n'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines = ['a', 'b', 'c']\n",
+    "print('\\n'.join(lines) + \"\\n\\n\")\n",
+    "'\\n'.join(lines) + \"\\n\\n\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63caa0d9",
    "metadata": {},
    "outputs": [],
    "source": []
