--- a/notebooks/ocean-example1.ipynb
+++ b/notebooks/ocean-example1.ipynb
@@ -441,9 +441,9 @@
     }
    ],
    "source": [
-    "lines = ['a', 'b', 'c']\n",
-    "print('\\n'.join(lines) + \"\\n\\n\")\n",
-    "'\\n'.join(lines) + \"\\n\\n\""
+    "lines = [\"a\", \"b\", \"c\"]\n",
+    "print(\"\\n\".join(lines) + \"\\n\\n\")\n",
+    "\"\\n\".join(lines) + \"\\n\\n\""
    ]
   },
   {
