Refactor test recipients and clean up notebooks
Renamed TEST_BCC_RECIPIENTS to TEST_RECIPIENTS in .env.template and updated config.yaml accordingly. Deleted example notebooks ocean-example1.ipynb and wind-example1.ipynb. Updated run.ipynb to disable email sending and improved output formatting. Simplified test.ipynb to a markdown cell for developer testing context.

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -1,70 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "d231a25b",
+   "cell_type": "markdown",
+   "id": "29cee95e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sender email: nbenelli.waterreport@gmail.com\n"
-     ]
-    }
-   ],
    "source": [
-    "import os\n",
-    "import yaml\n",
-    "from dotenv import load_dotenv\n",
-    "from string import Template\n",
-    "from dotenv import find_dotenv\n",
+    "# Test Developer\n",
     "\n",
-    "PROJECT_DIR = os.path.dirname(find_dotenv(\"pyproject.toml\")) or os.getcwd()\n",
-    "\n",
-    "\n",
-    "def load_config_with_env_substitution(path: str) -> dict:\n",
-    "    \"\"\"Load YAML config and substitute environment variables.\"\"\"\n",
-    "    # Load .env file into environment\n",
-    "    load_dotenv()\n",
-    "\n",
-    "    with open(path) as f:\n",
-    "        content = f.read()\n",
-    "\n",
-    "    # Replace ${VAR_NAME} with environment variable values\n",
-    "    template = Template(content)\n",
-    "    substituted = template.substitute(os.environ)\n",
-    "\n",
-    "    return yaml.safe_load(substituted)\n",
-    "\n",
-    "\n",
-    "# Usage\n",
-    "yaml_path = os.path.join(PROJECT_DIR, \"config.yaml\")\n",
-    "config = load_config_with_env_substitution(yaml_path)\n",
-    "sender = config[\"email\"][\"sender\"]\n",
-    "print(f\"Sender email: {sender}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3781c780",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-74.22461197107408"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "config[\"location\"].get(\"longitude\")"
+    "Notebook used for testing and developing"
    ]
   },
   {
