--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -2,17 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c3f11a55",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-27 12:26:37,949 [INFO] Fetching tide data...\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -24,18 +17,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 12:26:38,068 [INFO] Fetching water temp data...\n",
-      "2025-07-27 12:26:38,240 [INFO] Fetching wind data...\n",
-      "2025-07-27 12:26:38,739 [INFO] Generating email body...\n",
-      "2025-07-27 12:26:38,741 [INFO] Sending email...\n"
+      "2025-07-27 14:44:16,723 [INFO] Fetching tide data...\n",
+      "2025-07-27 14:44:16,914 [INFO] Fetching water temp data...\n",
+      "2025-07-27 14:44:17,029 [INFO] Fetching wind data...\n",
+      "2025-07-27 14:44:17,585 [INFO] Generating email body...\n",
+      "2025-07-27 14:44:17,586 [INFO] Sending email...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Email sent successfully.\n",
-      "Email sent successfully!\n"
+      "Email sending is disabled.\n",
+      "\n",
+      "To: None\n",
+      " BCC: benellinick@gmail.com, nickbenelliwork@gmail.com, nick.benelli12@gmail.com\n",
+      " From: nbenelli.waterreport@gmail.com\n",
+      "\n",
+      "\n",
+      " TEST: 🌊 Daily Water Report: 2025-07-27\n",
+      "\n",
+      "Daily Water Report – Sunday, July 27, 2025 \n",
+      "\n",
+      "🌡️ Water Temperature: 75.9 °F\n",
+      "\n",
+      "🌊 Tides:\n",
+      "High Tide at 10:10 AM — 4.2 ft\n",
+      "Low Tide at 4:02 PM — 0.3 ft\n",
+      "\n",
+      "🌬️ Wind Forecast:\n",
+      "Here’s the wind forecast near your beach for key times today:\n",
+      "-  8 AM:  6.3 mph SE  (141°) → Onshore\n",
+      "- 12 PM: 13.4 mph S   (170°) → Cross/Onshore\n",
+      "-  3 PM: 17.1 mph S   (172°) → Cross/Onshore\n",
+      "-  6 PM: 19.6 mph S   (186°) → Cross/Onshore\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -43,7 +60,7 @@
     "import lbi_surf\n",
     "\n",
     "lbi_surf.hello()\n",
-    "lbi_surf.main(run_email=True, test=True)"
+    "lbi_surf.main(run_email=False, test=True)"
    ]
   },
   {
