Refactor recipient Gist URL handling and test mode logic
Replaces BCC_URL with RECIP_GIST_URL and RECIP_GIST_TEST_URL in .env.template and config.py. Refactors address_fetcher.py and main.py to select the correct Gist URL for recipients based on test mode, removing redundant test recipient logic from main.py. Updates notebook output to reflect new recipient list.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -17,11 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 15:21:15,994 [INFO] Fetching tide data...\n",
-      "2025-07-27 15:21:16,289 [INFO] Fetching water temp data...\n",
-      "2025-07-27 15:21:16,441 [INFO] Fetching wind data...\n",
-      "2025-07-27 15:21:16,992 [INFO] Generating email body...\n",
-      "2025-07-27 15:21:16,994 [INFO] Sending email...\n"
+      "2025-07-27 15:43:11,962 [INFO] Fetching tide data...\n",
+      "2025-07-27 15:43:12,259 [INFO] Fetching water temp data...\n",
+      "2025-07-27 15:43:12,387 [INFO] Fetching wind data...\n",
+      "2025-07-27 15:43:12,938 [INFO] Generating email body...\n",
+      "2025-07-27 15:43:12,939 [INFO] Sending email...\n"
      ]
     },
     {
@@ -31,7 +31,7 @@
       "Email sending is disabled.\n",
       "\n",
       "To: None\n",
-      " BCC: benellinick@gmail.com, nickbenelliwork@gmail.com, nick.benelli12@gmail.com\n",
+      " BCC: nick.benelli12@gmail.com, elizabeth.benelli@gmail.com, tom.benelli@gmail.com, benelli5@verizon.net, maryannagarifo@gmail.com, jad1098@verizon.net\n",
       " From: nbenelli.waterreport@gmail.com\n",
       "\n",
       "\n",
@@ -39,7 +39,7 @@
       "\n",
       "Daily Water Report – Sunday, July 27, 2025 \n",
       "\n",
-      "🌡️ Water Temperature: 76.5 °F\n",
+      "🌡️ Water Temperature: 76.6 °F\n",
       "\n",
       "🌊 Tides:\n",
       "High Tide at 10:10 AM — 4.2 ft\n",
