Update test recipients config and notebook outputs
Changed TEST_RECIPIENTS_GIST_URL to use RECIP_GIST_TEST_URL in config.py for correct environment variable usage. Updated run.ipynb outputs to reflect new test recipients and recent run results. Minor code comment adjustments in main.py for location config access.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -7,6 +7,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-27 15:50:10,560 [INFO] Fetching tide data...\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -17,11 +24,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 15:43:11,962 [INFO] Fetching tide data...\n",
-      "2025-07-27 15:43:12,259 [INFO] Fetching water temp data...\n",
-      "2025-07-27 15:43:12,387 [INFO] Fetching wind data...\n",
-      "2025-07-27 15:43:12,938 [INFO] Generating email body...\n",
-      "2025-07-27 15:43:12,939 [INFO] Sending email...\n"
+      "2025-07-27 15:50:10,688 [INFO] Fetching water temp data...\n",
+      "2025-07-27 15:50:10,870 [INFO] Fetching wind data...\n",
+      "2025-07-27 15:50:11,593 [INFO] Generating email body...\n",
+      "2025-07-27 15:50:11,595 [INFO] Sending email...\n"
      ]
     },
     {
@@ -31,7 +37,7 @@
       "Email sending is disabled.\n",
       "\n",
       "To: None\n",
-      " BCC: nick.benelli12@gmail.com, elizabeth.benelli@gmail.com, tom.benelli@gmail.com, benelli5@verizon.net, maryannagarifo@gmail.com, jad1098@verizon.net\n",
+      " BCC: nick.benelli12@gmail.com, nickbenelliwork@gmail.com\n",
       " From: nbenelli.waterreport@gmail.com\n",
       "\n",
       "\n",
@@ -39,7 +45,7 @@
       "\n",
       "Daily Water Report – Sunday, July 27, 2025 \n",
       "\n",
-      "🌡️ Water Temperature: 76.6 °F\n",
+      "🌡️ Water Temperature: 76.8 °F\n",
       "\n",
       "🌊 Tides:\n",
       "High Tide at 10:10 AM — 4.2 ft\n",
@@ -58,6 +64,7 @@
    ],
    "source": [
     "import lbi_surf\n",
+    "\n",
     "lbi_surf.hello()\n",
     "lbi_surf.main(run_email=False, test=True)"
    ]
