--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -7,13 +7,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-27 15:50:10,560 [INFO] Fetching tide data...\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -24,10 +17,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 15:50:10,688 [INFO] Fetching water temp data...\n",
-      "2025-07-27 15:50:10,870 [INFO] Fetching wind data...\n",
-      "2025-07-27 15:50:11,593 [INFO] Generating email body...\n",
-      "2025-07-27 15:50:11,595 [INFO] Sending email...\n"
+      "2025-07-27 16:04:12,819 [INFO] Fetching tide data...\n",
+      "2025-07-27 16:04:13,229 [INFO] Fetching water temp data...\n",
+      "2025-07-27 16:04:13,435 [INFO] Fetching wind data...\n",
+      "2025-07-27 16:04:14,068 [INFO] Generating email body...\n",
+      "2025-07-27 16:04:14,069 [INFO] Sending email...\n"
      ]
     },
     {
@@ -45,7 +39,7 @@
       "\n",
       "Daily Water Report – Sunday, July 27, 2025 \n",
       "\n",
-      "🌡️ Water Temperature: 76.8 °F\n",
+      "🌡️ Water Temperature: 76.6 °F\n",
       "\n",
       "🌊 Tides:\n",
       "High Tide at 10:10 AM — 4.2 ft\n",
