Refactor email recipient config and add NOAA/OpenMeteo tests
Replaces EMAIL_RECIPIENT with EMAIL_RECIPIENTS throughout environment, config, and code to support multiple recipients. Updates related tests and workflow files. Adds new tests for NOAA data and OpenMeteo wind data fetching, improving test coverage for external API integrations.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "108a266d",
+   "metadata": {},
+   "source": [
+    "# Run Package\n",
+    "\n",
+    "Run packages with thest varaibles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "c3f11a55",
@@ -17,11 +27,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 16:04:12,819 [INFO] Fetching tide data...\n",
-      "2025-07-27 16:04:13,229 [INFO] Fetching water temp data...\n",
-      "2025-07-27 16:04:13,435 [INFO] Fetching wind data...\n",
-      "2025-07-27 16:04:14,068 [INFO] Generating email body...\n",
-      "2025-07-27 16:04:14,069 [INFO] Sending email...\n"
+      "2025-07-27 17:06:44,559 [INFO] Fetching tide data...\n",
+      "2025-07-27 17:06:44,814 [INFO] Fetching water temp data...\n",
+      "2025-07-27 17:06:44,984 [INFO] Fetching wind data...\n",
+      "2025-07-27 17:06:45,622 [INFO] Generating email body...\n",
+      "2025-07-27 17:06:45,623 [INFO] Sending email...\n"
      ]
     },
     {
