Rename lbi_surf to ocean_report and update config
Renamed the package and all source files from lbi_surf to ocean_report throughout the codebase, including imports, scripts, and workflow references. Updated configuration to support beach orientation degrees, revised the LICENSE to a non-commercial variant, and improved documentation in README. Adjusted tests, scripts, and notebook to use the new package name and configuration.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -12,15 +12,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c3f11a55",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello from ocean-report!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-27 17:39:02,376 [INFO] Fetching tide data...\n",
+      "2025-07-27 17:39:02,708 [INFO] Fetching water temp data...\n",
+      "2025-07-27 17:39:02,846 [INFO] Fetching wind data...\n",
+      "2025-07-27 17:39:03,418 [INFO] Generating email body...\n",
+      "2025-07-27 17:39:03,420 [INFO] Sending email...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email sending is disabled.\n",
+      "\n",
+      "To: None\n",
+      " BCC: nick.benelli12@gmail.com, nickbenelliwork@gmail.com\n",
+      " From: nbenelli.waterreport@gmail.com\n",
+      "\n",
+      "\n",
+      " TEST: 🌊 Daily Water Report: 2025-07-27\n",
+      "\n",
+      "Daily Water Report – Sunday, July 27, 2025 \n",
+      "\n",
+      "🌡️ Water Temperature: 76.6 °F\n",
+      "\n",
+      "🌊 Tides:\n",
+      "High Tide at 10:10 AM — 4.2 ft\n",
+      "Low Tide at 4:02 PM — 0.3 ft\n",
+      "\n",
+      "🌬️ Wind Forecast:\n",
+      "Here’s the wind forecast near your beach for key times today:\n",
+      "-  8 AM:  6.3 mph SE  (141°) → Onshore\n",
+      "- 12 PM: 13.4 mph S   (170°) → Cross/Onshore\n",
+      "-  3 PM: 17.1 mph S   (172°) → Cross/Onshore\n",
+      "-  6 PM: 19.6 mph S   (186°) → Cross/Onshore\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import lbi_surf\n",
+    "# Import necessary modules\n",
+    "import ocean_report\n",
     "\n",
-    "lbi_surf.hello()\n",
-    "lbi_surf.main(run_email=False, test=True)"
+    "ocean_report.hello()\n",
+    "ocean_report.main(run_email=False, test=True)"
    ]
   },
   {
@@ -34,7 +85,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "LBI-Surf",
+   "display_name": "Ocean-Report",
    "language": "python",
    "name": "python3"
   },
