Cast BEACH_ORIENTATION_DEGREES to float in config
Wraps the BEACH_ORIENTATION_DEGREES assignment in a float() call to ensure the value is always a float, regardless of the config input type. Also updates notebook output to reflect new log timestamps.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -17,6 +17,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-07-27 17:40:32,770 [INFO] Fetching tide data...\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -27,11 +34,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 17:39:02,376 [INFO] Fetching tide data...\n",
-      "2025-07-27 17:39:02,708 [INFO] Fetching water temp data...\n",
-      "2025-07-27 17:39:02,846 [INFO] Fetching wind data...\n",
-      "2025-07-27 17:39:03,418 [INFO] Generating email body...\n",
-      "2025-07-27 17:39:03,420 [INFO] Sending email...\n"
+      "2025-07-27 17:40:33,059 [INFO] Fetching water temp data...\n",
+      "2025-07-27 17:40:33,228 [INFO] Fetching wind data...\n",
+      "2025-07-27 17:40:33,741 [INFO] Generating email body...\n",
+      "2025-07-27 17:40:33,743 [INFO] Sending email...\n"
      ]
     },
     {
