--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -17,13 +17,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-27 17:40:32,770 [INFO] Fetching tide data...\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -34,10 +27,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-27 17:40:33,059 [INFO] Fetching water temp data...\n",
-      "2025-07-27 17:40:33,228 [INFO] Fetching wind data...\n",
-      "2025-07-27 17:40:33,741 [INFO] Generating email body...\n",
-      "2025-07-27 17:40:33,743 [INFO] Sending email...\n"
+      "2025-07-27 17:57:03,570 [INFO] Fetching tide data...\n",
+      "2025-07-27 17:57:03,868 [INFO] Fetching water temp data...\n",
+      "2025-07-27 17:57:04,021 [INFO] Fetching wind data...\n",
+      "2025-07-27 17:57:04,653 [INFO] Generating email body...\n",
+      "2025-07-27 17:57:04,654 [INFO] Sending email...\n"
      ]
     },
     {
@@ -55,7 +49,7 @@
       "\n",
       "Daily Water Report – Sunday, July 27, 2025 \n",
       "\n",
-      "🌡️ Water Temperature: 76.6 °F\n",
+      "🌡️ Water Temperature: 76.8 °F\n",
       "\n",
       "🌊 Tides:\n",
       "High Tide at 10:10 AM — 4.2 ft\n",
