Refactor main.py and update notebook usage
Refactored src/ocean_report/main.py for improved readability and configuration handling, including clearer variable names, a toggle for using recipient URLs, and more structured sections for email, location, and data fetching. Updated the notebook to use the new main() signature and removed hardcoded outputs and test mode.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -5,73 +5,23 @@
    "id": "108a266d",
    "metadata": {},
    "source": [
-    "# Run Package\n",
+    "# Ocean Report: Run App\n",
     "\n",
     "Run packages with thest varaibles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c3f11a55",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello from ocean-report!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-07-27 17:57:03,570 [INFO] Fetching tide data...\n",
-      "2025-07-27 17:57:03,868 [INFO] Fetching water temp data...\n",
-      "2025-07-27 17:57:04,021 [INFO] Fetching wind data...\n",
-      "2025-07-27 17:57:04,653 [INFO] Generating email body...\n",
-      "2025-07-27 17:57:04,654 [INFO] Sending email...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Email sending is disabled.\n",
-      "\n",
-      "To: None\n",
-      " BCC: nick.benelli12@gmail.com, nickbenelliwork@gmail.com\n",
-      " From: nbenelli.waterreport@gmail.com\n",
-      "\n",
-      "\n",
-      " TEST: 🌊 Daily Water Report: 2025-07-27\n",
-      "\n",
-      "Daily Water Report – Sunday, July 27, 2025 \n",
-      "\n",
-      "🌡️ Water Temperature: 76.8 °F\n",
-      "\n",
-      "🌊 Tides:\n",
-      "High Tide at 10:10 AM — 4.2 ft\n",
-      "Low Tide at 4:02 PM — 0.3 ft\n",
-      "\n",
-      "🌬️ Wind Forecast:\n",
-      "Here’s the wind forecast near your beach for key times today:\n",
-      "-  8 AM:  6.3 mph SE  (141°) → Onshore\n",
-      "- 12 PM: 13.4 mph S   (170°) → Cross/Onshore\n",
-      "-  3 PM: 17.1 mph S   (172°) → Cross/Onshore\n",
-      "-  6 PM: 19.6 mph S   (186°) → Cross/Onshore\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import necessary modules\n",
     "import ocean_report\n",
     "\n",
     "ocean_report.hello()\n",
-    "ocean_report.main(run_email=False, test=True)"
+    "ocean_report.main(run_email=False, test=False)"
    ]
   },
   {
