--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -16,6 +16,21 @@
    "id": "83684e5d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import ocean_report\n",
+    "\n",
+    "\n",
+    "ocean_report.hello()\n",
+    "\n",
+    "ocean_report.main(run_email=False, test=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee460ce6",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
