--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -13,15 +13,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff237167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Constants for email run\n",
+    "RUN_EMAIL= False\n",
+    "TEST= True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c3f11a55",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary modules\n",
     "import ocean_report\n",
     "\n",
+    "# Print Hello\n",
     "ocean_report.hello()\n",
-    "ocean_report.main(run_email=False, test=False)"
+    "\n",
+    "# Run Report\n",
+    "ocean_report.main(run_email=RUN_EMAIL, test=TEST)"
    ]
   },
   {
@@ -35,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ocean-Report",
+   "display_name": "ocean-report (3.11.1)",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
