Update report execution and logging behavior
Set TEST to false in workflow to run in normal mode. Updated notebook to call run_report instead of main. Enhanced logging in run_report to log email sending status and when email content is printed to console.

--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -35,7 +35,7 @@
     "ocean_report.hello()\n",
     "\n",
     "# Run Report\n",
-    "ocean_report.main(run_email=RUN_EMAIL, test=TEST)"
+    "ocean_report.run_report(run_email=RUN_EMAIL, test=TEST)"
    ]
   },
   {
