--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "from datetime import date, timedelta\n",
     "\n",
+    "\n",
     "def get_labor_day(year: int) -> date:\n",
     "    \"\"\"\n",
     "    Return the date of Labor Day (first Monday of September) for a given year.\n",
@@ -33,7 +34,7 @@
     "    sept_first = date(year, 9, 1)\n",
     "    # weekday() → Monday=0 ... Sunday=6\n",
     "    days_until_monday = (0 - sept_first.weekday()) % 7\n",
-    "    return sept_first + timedelta(days=days_until_monday)\n"
+    "    return sept_first + timedelta(days=days_until_monday)"
    ]
   },
   {
@@ -59,7 +60,7 @@
     "print(get_labor_day(2024))\n",
     "print(get_labor_day(2025))  # 2025-09-01\n",
     "print(get_labor_day(2026))  # 2026-09-07\n",
-    "print(get_labor_day(2027))  # 2027-09-06\n"
+    "print(get_labor_day(2027))  # 2027-09-06"
    ]
   },
   {
@@ -70,6 +71,7 @@
    "outputs": [],
    "source": [
     "from datetime import date, timedelta\n",
+    "\n",
     "\n",
     "def get_memorial_day(year: int) -> date:\n",
     "    \"\"\"\n",
@@ -85,7 +87,7 @@
     "    may_last = date(year, 5, 31)\n",
     "    # Go backwards until Monday\n",
     "    days_back_to_monday = (may_last.weekday() - 0) % 7\n",
-    "    return may_last - timedelta(days=days_back_to_monday)\n"
+    "    return may_last - timedelta(days=days_back_to_monday)"
    ]
   },
   {
@@ -144,7 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_summer(today: date | None = None, days_before_memorial: int = 4, days_after_labor: int = 7) -> bool:\n",
+    "def is_summer(\n",
+    "    today: date | None = None, days_before_memorial: int = 4, days_after_labor: int = 7\n",
+    ") -> bool:\n",
     "    \"\"\"\n",
     "    Determine if a given date is in 'summer' season:\n",
     "    - Starts 4 days before Memorial Day\n",
@@ -152,7 +156,7 @@
     "    \"\"\"\n",
     "    if today is None:\n",
     "        today = date.today()\n",
-    "    \n",
+    "\n",
     "    year = today.year\n",
     "    memorial_day = get_memorial_day(year) - timedelta(days=days_before_memorial)\n",
     "    labor_day = get_labor_day(year) + timedelta(days=days_after_labor)\n",
